# freshawair

./: .dockerignore  .gitignore  .rsyncignore  002_init_user.sql  004_init_table.sql  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.esy-cache  Dockerfile.server  README.md  agenda.md  deploy.sh  deploy.start.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dune  dune.bak  freshawair.opam.deps  opam.deps.export  opam.deps.sh  opam.dev.deps.sh  opam.lame.deps.sh  package.json  rad  rad.ts  readme.md  renovate.json
.ci/: pipelines-release.js
.github/workflows/: build.yml
.rad/: common.ts  db.ts  deploy.ts  format.ts  opam.ts  ui.ts
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/libagent/: Cargo.toml
crates/libagent/src/: config.rs  error.rs  etl.rs  lib.rs
crates/libawair/: Cargo.toml
db.init/: 001_init_extensions.sql  002_init_user.sql  004_init_table.sql
grafana/: .env
lib/: Awair.ml  CohttpServerCopy.ml  Console.ml  Constants.ml  Db.ml  FreshAgent.ml  FreshServer.ml  HandlerCommon.ml  HandlerFs.ml  HandlerGetStats.ml  Log.ml  Stats.ml  dune
lib/agent/: Agent.ml  Awair.ml  Config.ml  Db.ml  Effects.ml  Http.ml  dune
lib/freshcommon/: Console.ml  HandlerCommon.ml  Log.ml  dune
lib/freshmodel/: dune  freshmodel.ml
lib/server/: Awair.ml  Db.ml  HandlerGetStats.ml  JsonHacks.ml  Server.ml  dune
ui/: .env  .gitignore  package.json  readme.md
ui/src/: AirChart.css  AirChart.tsx  AirChartBinningControl.tsx  AirChartPage.tsx  App.css  App.tsx  Layout.tsx  QueryContext.tsx  index.tsx  query.ts
(+7 files in other folders)
