[package]
name = "libagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.24"
clap = "4.1.11"
libawair = { path = "../libawair" }
tokio = { version = "1.26.0", features = ["full"] }
tokio-postgres = "0.7.7"
# time = "0.3.20"
speedate = "0.7.0"
